--- a/sass/components/_app.scss
+++ b/sass/components/_app.scss
@@ -14,7 +14,7 @@ $background-color: #f5f5f5;
 
   @include phone {
     width: 92%;
-    padding: 25px 5px 18px 18px;
+    padding: 25px 0px 18px 23px;
   }
 
   ol {
